--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,17 @@
     </properties>
     
 
+
 <build>
     <plugins>
         <plugin>
             <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.22.2</version>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.10.1</version> <!-- або новіша версія -->
+            <configuration>
+                <source>21</source>
+                <target>21</target>
+            </configuration>
         </plugin>
     </plugins>
 </build>
