--- a/pom.xml
+++ b/pom.xml
@@ -14,31 +14,15 @@
     </properties>
     
 
-
 <build>
-  <plugins>
-    <plugin>
-      <groupId>org.apache.maven.plugins</groupId>
-      <artifactId>maven-toolchains-plugin</artifactId>
-      <version>3.0.0</version>
-      <executions>
-        <execution>
-          <goals>
-            <goal>toolchain</goal>
-          </goals>
-        </execution>
-      </executions>
-      <configuration>
-        <toolchains>
-          <jdk>
-            <version>[21,)</version> <!-- Вказуємо JDK 21 -->
-          </jdk>
-        </toolchains>
-      </configuration>
-    </plugin>
-  </plugins>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.2</version>
+        </plugin>
+    </plugins>
 </build>
-
 <dependencies>
     <!-- JUnit 5 Dependency -->
     <dependency>
